# note-me

./: LICENSE  README.md
note-me-backend/: Cargo.toml  Dockerfile  cloudbuild.yaml  count.bat  test.bat
note-me-backend/src/: main.rs  note.rs  server.rs
note-me-frontend/: package-lock.json  package.json
note-me-frontend/src/: App.tsx  Note.ts  NoteForm.tsx  main.tsx
