[package]
name = "note-me-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
http = "1.2.0"
json = "0.12.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }

[[bin]]
name = "note-me-backend"
path = "src/main.rs"

