[package]
name = "note-me-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4", features = ["serde"] }
http = "1.2.0"
json = "0.12.4"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] } #for axum 0.6
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "note-me-backend"
path = "src/main.rs"

